[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/textures/miscs/dreamscape.jpg" type="Texture" id=1]
[ext_resource path="res://assets/textures/miscs/castle.jpg" type="Texture" id=2]
[ext_resource path="res://assets/textures/miscs/forest.jpg" type="Texture" id=3]
[ext_resource path="res://assets/scripts/global/StageSelect.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/miscs/castle_disabled.jpg" type="Texture" id=5]
[ext_resource path="res://assets/textures/miscs/back.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/miscs/back_selected.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/trance.ogg" type="AudioStream" id=8]

[node name="StageSelect" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="SelectText" type="Label" parent="."]
margin_left = 384.0
margin_top = 128.0
margin_right = 471.0
margin_bottom = 142.0
rect_scale = Vector2( 6, 6 )
text = "STAGE SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageOneButton" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 448.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageOneText" type="Label" parent="."]
margin_left = 344.0
margin_top = 464.0
margin_right = 416.0
margin_bottom = 478.0
rect_scale = Vector2( 2, 2 )
text = "STAGE ONE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageTwoButton" type="TextureButton" parent="."]
margin_left = 768.0
margin_top = 256.0
margin_right = 960.0
margin_bottom = 448.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageTwoText" type="Label" parent="."]
margin_left = 784.0
margin_top = 456.0
margin_right = 859.0
margin_bottom = 470.0
rect_scale = Vector2( 2, 2 )
text = "STAGE TWO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 552.0
margin_top = 448.0
margin_right = 744.0
margin_bottom = 608.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true
[connection signal="pressed" from="StageOneButton" to="." method="_on_StageOneButton_pressed"]
[connection signal="pressed" from="StageTwoButton" to="." method="_on_StageTwoButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
